[package]
name = "nothing_interesting"
version = "0.1.0"
authors = ["Daniil Naumetc <daniil.naumetc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }